--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -1,3 +1,7 @@
+:root {
+  --tw-shadow-color: red; /* Replace with your desired color value */
+}
+
 html,
 body,
 div,
@@ -1225,7 +1229,6 @@ a:focus {
 .footer__left {
   grid-column: 1/2;
   grid-row: 1/2;
-  -ms-grid-columns: (1fr) [3];
   grid-template-columns: repeat(3, 1fr);
   padding-top: 10px;
 }
@@ -1246,24 +1249,7 @@ a:focus {
 .footer__right {
   grid-column: 2/3;
   grid-row: 1/3;
-  -ms-grid-columns: (1fr) [6];
   grid-template-columns: repeat(6, 1fr);
-}
-.social__icons .social__icons--link {
-  float: left;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  background-color: white;
-  color: #09394f;
-  border: 2px solid white;
-  border-radius: 50%;
-  margin-left: 20px;
-  margin-bottom: 20px;
-  -webkit-transition: 0.3s ease all;
-  transition: 0.3s ease all;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
 }
 .social__icons .social__icons--link span {
   font-size: 22px;
@@ -2752,14 +2738,14 @@ select {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color),
-    0 2px 4px -2px var(--tw-shadow-color);
+  0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
-    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
