TASK-8 (Authorization) - feat: create page for when verification email is sent during registration         modified:   public/assets/main.css         modified:   src/App/Controllers/AuthController.php         new file:   src/App/views/auth/emailSent.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -61,6 +61,12 @@ img {
   padding-bottom: 363px;
 }
 
+/* Email Sent */
+.email-success {
+  margin-top: 50px;
+  text-align: center;
+}
+
 /* Hero */
 .main__article {
   clear: both;
