TASK-6 (Article Page) - feat: add comments section         modified:   autoload.php         modified:   public/assets/main.css         modified:   src/App/Controllers/ArticleController.php         new file:   src/App/Controllers/CommentsController.php         new file:   src/App/Models/Comments/CommentModel.php         modified:   src/App/bootstrap.php         modified:   src/App/container-definitions.php         modified:   src/App/views/articles/article.php         new file:   src/App/views/articles/comment.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -61,6 +61,10 @@ img {
   padding-bottom: 363px;
 }
 
+.comment {
+  border: 1px solid black;
+}
+
 /* Email Sent */
 .email-success {
   margin-top: 50px;
