TASK-16 (Profile Page) - feat: create profile page         new file:   public/assets/img/user.webp         modified:   public/assets/main.css         modified:   src/App/Controllers/AuthController.php         new file:   src/App/Controllers/ProfileController.php         modified:   src/App/Models/Users/UserModel.php         modified:   src/App/Services/FormValidatorService.php         modified:   src/App/bootstrap.php         modified:   src/App/views/auth/register.php         modified:   src/App/views/partials/_header.php         new file:   src/App/views/profile.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -61,6 +61,16 @@ img {
   padding-bottom: 363px;
 }
 
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile__info__field {
+  display: block;
+}
+
 .comment {
   border: 1px solid black;
 }
