--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -83,6 +83,7 @@ img {
 }
 
 .comment-form {
+  margin-bottom: 0;
   display: flex;
   width: 100%;
   background-color: transparent;
@@ -114,15 +115,45 @@ img {
 }
 
 .comment {
+  position: relative;
   margin-top: 20px;
   padding: 10px;
   display: flex;
   border: 1px solid #c6c6c6;
 }
 
+.comment-avatar {
+  margin-right: 20px;
+  max-width: 100px;
+}
+
 .comment-info__date {
   font-size: 0.7rem;
   color: #9ca3af;
+}
+
+.comment-actions {
+  display: flex;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.comment-actions__icon {
+  padding: 2px;
+  max-width: 30px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  transition: transform 0.2s ease-in-out;
+}
+
+.comment-actions__icon:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.comment-actions__icon:not(:last-child) {
+  margin-right: 10px;
 }
 
 /* Email Sent */
