--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -127,9 +127,38 @@ img {
   max-width: 100px;
 }
 
+.comment__right {
+  width: 100%;
+}
+
+.comment-info {
+
+}
+
+.comment-info__text {
+  height: auto;
+  border: none;
+  resize: none;
+  cursor: default;
+}
+
+.comment_editable {
+  border: 1px solid #ccc!important;
+  cursor: text!important;
+}
+
 .comment-info__date {
   font-size: 0.7rem;
   color: #9ca3af;
+}
+
+.comment__submit-container {
+  display: flex;
+  justify-content: center;
+}
+
+.invisible {
+  display: none!important;
 }
 
 .comment-actions {
