TASK-30 (Password restore) - feat: start password restore feature         modified:   public/assets/main.css         modified:   src/App/Controllers/AuthController.php         modified:   src/App/Models/Users/UserModel.php         modified:   src/App/bootstrap.php         modified:   src/App/views/auth/login.php         new file:   src/App/views/auth/restorePassword.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -71,6 +71,10 @@ img {
   display: block;
 }
 
+.forgot-password {
+  text-decoration: underline!important;
+}
+
 /*Comments*/
 .comments {
   padding: 20px 20px;
