--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -28,9 +28,6 @@ img {
 *:after {
   box-sizing: border-box;
 }
-a {
-  background-color: transparent;
-}
 a:focus {
   outline: thin dotted;
 }
@@ -61,14 +58,37 @@ img {
   padding-bottom: 363px;
 }
 
+.comment-avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
 .profile {
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.profile__left {
+  padding-top: 100px;
+}
+
+.profile-image {
+  height: 200px;
+  width: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
 .profile__info__field {
   display: block;
+}
+
+.profile__info__change {
+  display: inline-block;
+  margin-left: 20px;
 }
 
 .forgot-password {
@@ -138,6 +158,7 @@ img {
 .comment-info {
 
 }
+
 
 .comment-info__text {
   height: auto;
@@ -262,7 +283,6 @@ img {
 a {
   text-decoration: underline;
   word-wrap: break-word;
-  color: inherit;
   font-size: 16px;
   font-size: 1rem;
   line-height: 24px;
@@ -1040,20 +1060,6 @@ p {
   color: #09394f;
   background: #cfd8dd;
 }
-a {
-  text-decoration: underline;
-  word-wrap: break-word;
-  color: inherit;
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 24px;
-  line-height: 1.5rem;
-}
-a,
-a:active,
-a:focus {
-  outline: 0;
-}
 a img {
   border: 0;
   background: 0;
@@ -1325,20 +1331,6 @@ ul {
 }
 ul {
   list-style: disc;
-}
-a {
-  text-decoration: underline;
-  word-wrap: break-word;
-  color: inherit;
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 24px;
-  line-height: 1.5rem;
-}
-a,
-a:active,
-a:focus {
-  outline: 0;
 }
 .footer {
   background-color: #09394f;
@@ -1933,20 +1925,6 @@ blockquote p:last-of-type {
   color: #09394f;
   background: #cfd8dd;
 }
-a {
-  text-decoration: underline;
-  word-wrap: break-word;
-  color: inherit;
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 24px;
-  line-height: 1.5rem;
-}
-a,
-a:active,
-a:focus {
-  outline: 0;
-}
 a img {
   border: 0;
   background: 0;
@@ -2117,14 +2095,6 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: inherit;
-}
-a {
-  color: inherit;
-  text-decoration: inherit;
-}
-b,
-strong {
-  font-weight: bolder;
 }
 code,
 kbd,
