--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -69,28 +69,32 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 100px;
 }
 
 .profile__left {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 50px;
-  padding-top: 100px;
 }
 
-.profile__avatar-container {
+.profile__avatar-input {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.profile-image {
-  height: 200px;
-  width: 200px;
+.profile__avatar-container {
+  max-width: 200px;
+  max-height: 200px;
   overflow: hidden;
   border-radius: 50%;
+}
+
+.profile__avatar {
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .profile__info__field {
