--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -58,6 +58,14 @@ img {
   padding-bottom: 363px;
 }
 
+.section__title {
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(5, 35, 76);
+  color: rgb(5, 35, 76);
+  font-weight: bold;
+}
+
 .comment-avatar {
   width: 80px;
   height: 80px;
