--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -249,8 +249,9 @@ img {
 /* Hero */
 .main__article {
   width: 100%;
+  display: flex;
+  gap: 20px;
   clear: both;
-  display: inline-block;
   overflow: visible;
   margin-top: 45px;
   margin-bottom: 60px;
@@ -258,9 +259,6 @@ img {
 
 #manage-main-article {
   border: 1px solid black;
-}
-
-.main__article--img {
 }
 
 .main__article .card__image__link {
@@ -412,13 +410,6 @@ a:hover img {
   display: block;
   margin-bottom: 10px;
 }
-.card__title {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box!important;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
 .card__text {
   font-family: "Open Sans", sans-serif;
   font-size: 15px;
@@ -485,17 +476,8 @@ a:hover img {
 
 @media screen and (max-width: 1003px) {
   .main__article {
+    flex-direction: column;
     margin-top: 10px;
-  }
-  .container {
-    max-width: 747px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .container:after {
-    content: " ";
-    display: block;
-    clear: both;
   }
   header.primary__header {
     padding-top: 0;
@@ -1211,13 +1193,6 @@ a:hover img {
 .about__text {
   max-width: 500px;
   text-align: left;
-}
-.main__article {
-  clear: both;
-  display: inline-block;
-  overflow: visible;
-  margin-top: 45px;
-  margin-bottom: 60px;
 }
 
 .screen-reader-text {
@@ -2487,21 +2462,6 @@ select {
 
 .container {
   width: 100%;
-}
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
 }
 @media (min-width: 1280px) {
   .container {
