TASK-26 (Refactoring) - refactor: change styles of header and change emails address         modified:   public/assets/main.css         modified:   src/App/Controllers/AuthController.php         modified:   src/App/Controllers/ProfileController.php         modified:   src/App/views/partials/_header.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -3105,6 +3105,9 @@ hr {
   }
 }
 @media (min-width: 1024px) {
+  .navbar-nav {
+    padding-right: 30px;
+  }
   .lg\:gap-x-10 {
     -moz-column-gap: 2.5rem;
     column-gap: 2.5rem;
