feat: start manage users feature         modified:   public/assets/main.css         modified:   src/App/Controllers/ArticleController.php         new file:   src/App/Controllers/ControllerWIthPagination.php         new file:   src/App/Controllers/UsersController.php         modified:   src/App/Models/User.php         modified:   src/App/bootstrap.php         modified:   src/App/containerDefinitions.php         new file:   src/App/views/Views/UsersView.php         modified:   src/App/views/articles/manageArticles.php         new file:   src/App/views/manageData.php         new file:   src/App/views/partials/_deleteButton.php         modified:   src/App/views/partials/_header.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -421,6 +421,7 @@ a:hover img {
   text-decoration: underline;
 }
 .card__category {
+  word-break: normal;
   font-family: "neuzeit-grotesk";
   color: #00bcdb;
   font-weight: bold;
@@ -454,6 +455,9 @@ a:hover img {
   overflow: hidden;
   margin-bottom: 30px;
 }
+.nav-link {
+  display: inline;
+}
 .menu__trigger {
   cursor: pointer;
   position: absolute;
@@ -472,6 +476,7 @@ a:hover img {
   justify-content: center;
   align-items: center;
 }
+
 
 .container {
   min-height: 100vh;
