--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -36,7 +36,7 @@ a:hover {
   outline: 0;
 }
 td {
-  word-break: break-all;
+  word-break: break-word;
   text-align: center;
 }
 img {
@@ -257,6 +257,10 @@ img {
   margin-bottom: 60px;
 }
 
+.main__article__img {
+  flex: 1;
+}
+
 #manage-main-article {
   border: 1px solid black;
 }
@@ -264,6 +268,13 @@ img {
 .main__article .card__image__link {
   margin-top: 5px;
   margin-bottom: 0;
+}
+
+.manage-articles__image {
+  max-width: 200px;
+}
+
+.manage-articles__author {
 }
 
 .article__categories {
@@ -403,6 +414,7 @@ a:hover img {
 }
 .card__content {
   overflow: hidden;
+  flex: 1;
 }
 .card__content a {
   text-decoration: none;
