TASK-26 (Refactoring) - refactoring: make hero article categories clickable links, after changing username set new username to SESSION         modified:   public/assets/main.css         modified:   src/App/Controllers/ProfileController.php         modified:   src/App/views/articles/heroArticle.php

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -443,7 +443,7 @@ a:hover img {
   line-height: 18px;
   line-height: 1.125rem;
 }
-.card .card__category:hover {
+.card__category:hover {
   text-decoration: underline;
 }
 
